components/ua/merge-user-tool/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merge-user-tool
spec:
  template:
    spec:
      containers:
        - name: merge-user-tool
          # version: 1.3.0
          image: ghcr.io/isisbusapps/merge-user-tool@sha256:6261198b90c0599fcb48b8cf93670ba76f179186c27290121e02a7e91e8b4920
          ports:
            - containerPort: 7005
      volumes:
        - name: merge-user-tool-config
          secret:
            secretName: merge-user-tool-profiles
            items:
              - key: merge-user-tool-dev.properties
                path: application-dev.properties
              - key: mergeUserConfigDev.json
                path: mergeUserConfigDev.json
