components/ua/merge-user-tool/overlays/dev/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merge-user-tool
spec:
  template:
    spec:
      containers:
        - name: merge-user-tool
          image: ghcr.io/isisbusapps/merge-user-tool@sha256:9535498a61a636a10d415c7429baf62ad1c02e15a854cb82935b26ecb6d17271
          ports:
            - containerPort: 7005
      volumes:
        - name: merge-user-tool-config
          secret:
            secretName: merge-user-tool-profiles
            items:
              - key: merge-user-tool-dev.properties
                path: application-dev.properties
              - key: mergeUserConfigDev.json
                path: mergeUserConfigDev.json
