components/ua/merge-user-tool/overlays/dev/enable-debug-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: merge-user-tool
spec:
  ports:
    - name: debug
      protocol: TCP
      port: 7005
      targetPort: 7005
