components/ua/merge-user-tool/overlays/dev/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: merge-user-tool
spec:
  parentRefs:
  - name: envoy-gateway
    kind: Gateway
    namespace: envoy-gateway-system
    sectionName: https-facilities
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /users/merges
    backendRefs:
    - name: merge-user-tool
      port: 8080
